--- a/ArtistEventListings/ArtistEventListings.csproj
+++ b/ArtistEventListings/ArtistEventListings.csproj
@@ -187,6 +187,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\ListingsController.cs" />
+    <Compile Include="DAL\VApiEventRepository.cs" />
+    <Compile Include="DAL\VApiListingRepository.cs" />
+    <Compile Include="DAL\IEventRepository.cs" />
+    <Compile Include="DAL\IListingRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
