--- a/ArtistEventListings/packages.config
+++ b/ArtistEventListings/packages.config
@@ -10,6 +10,7 @@
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
