--- a/ArtistEventListings/packages.config
+++ b/ArtistEventListings/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="font-awesome" version="4.5.0" targetFramework="net451" />
   <package id="GogoKit" version="0.16.1" targetFramework="net451" />
   <package id="HalKit" version="0.7.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
