--- a/ArtistEventListings/ArtistEventListings.csproj
+++ b/ArtistEventListings/ArtistEventListings.csproj
@@ -194,7 +194,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\EventModel.cs" />
     <Compile Include="Models\EventsViewModel.cs" />
     <Compile Include="Models\ListingsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -240,8 +239,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="css\font-awesome.css" />
-    <Content Include="css\font-awesome.min.css" />
+    <Content Include="Content\font-awesome.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -285,7 +283,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Listings\IndexOld.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
     <Content Include="Views\Listings\Index.cshtml" />
   </ItemGroup>
